[gd_scene load_steps=4 format=3 uid="uid://ct0ndi5r7mf2u"]

[ext_resource type="FontFile" uid="uid://c3rhm83w4l0j8" path="res://fonts/Xolonium-Regular.ttf" id="1_15sno"]
[ext_resource type="Script" path="res://hud.gd" id="1_yms4x"]
[ext_resource type="AudioStream" uid="uid://btr6yrl0ysvhi" path="res://music/gameover.wav" id="3_w3raw"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_yms4x")

[node name="getLabel" type="Label" parent="."]
offset_top = 50.0
offset_right = 40.0
offset_bottom = 108.0
theme_override_fonts/font = ExtResource("1_15sno")
theme_override_font_sizes/font_size = 48

[node name="lostLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 50.0
offset_bottom = 108.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_15sno")
theme_override_font_sizes/font_size = 48

[node name="LVLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 50.0
offset_right = 20.0
offset_bottom = 128.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_15sno")
theme_override_font_sizes/font_size = 64

[node name="StartB" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -10.0
offset_right = 102.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_15sno")
theme_override_font_sizes/font_size = 64
text = "开始"

[node name="ExitB" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = 183.0
offset_right = 102.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_15sno")
theme_override_font_sizes/font_size = 64
text = "退出"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -176.0
offset_right = 20.0
offset_bottom = -118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_15sno")
theme_override_font_sizes/font_size = 48

[node name="BackHpmeB" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -149.0
offset_top = -159.0
offset_right = 153.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_15sno")
theme_override_font_sizes/font_size = 64
text = "返回主页"

[node name="game_over" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_w3raw")

[connection signal="button_up" from="StartB" to="." method="_on_start_b_button_up"]
[connection signal="button_up" from="ExitB" to="." method="_on_exit_b_button_up"]
[connection signal="button_up" from="BackHpmeB" to="." method="_on_back_hpme_b_button_up"]
